<resources>
    <string name="app_name">Matrix</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="operations_on_matrix">Operations on Matrix</string>
    <string name="basic_actions_of_matrix">Basic operations of Matrix</string>
    <string name="multiplication_of_matrix">Multiplication of Matrix</string>
    <string name="transpose_of_matrix">Transpose of Matrix</string>
    <string name="determinant_of_matrix">Determinant of Matrix</string>
    <string name="inverse_of_matrix">Inverse of Matrix</string>
    <string name="count_rows">Count rows of Matrix:</string>
    <string name="count_columns">Count columns of Matrix:</string>
    <string name="enter_value_of_matrices">Enter value of matrices:</string>
    <string name="matrix_a">Matrix A:</string>
    <string name="addition_symbol">+</string>
    <string name="matrix_b">Matrix B:</string>
    <string name="equals_symbol">=</string>
    <string name="text_warming_fill_up_matrix">Fill up Matrices!</string>
    <string name="result">Result</string>
    <string name="subtraction_symbol">-</string>
    <string name="count_columns_matrix_a">Columns of Matrix A:</string>
    <string name="count_columns_matrix_b">Columns of Matrix B:</string>
    <string name="count_rows_matrix_a">Rows of Matrix A:</string>
    <string name="multiplication_symbol">X</string>
    <string name="size_matrix">Size matrix:</string>
    <string name="text_determinant">Det(A)=</string>
    <string name="enter_value_of_matrix">Enter value of matrix:</string>
    <string name="about">About</string>
    <string name="question_exit">Do you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="special_for">Special for Dariusz Doliwa</string>
    <string name="the_app_matrix">The program Matrix</string>
    <string name="clear">CLEAR</string>
    <string name="text_save_result">Save result</string>
    <string name="hint_enter_name_saving">Enter name save…</string>
    <string name="text_btn_save">Save</string>
    <string name="text_btn_cancel">Cancel</string>
    <string name="text_name_can_not_be_empty">Name can not be empty</string>
    <string name="text_calculate">Calculate!</string>
    <string name="text_not_allowed">Not allowed!</string>
    <string name="text_error_opening_saving">Error opening!</string>
    <string name="inverted">Inverted</string>
    <string name="transposing">Transposed</string>
    <string name="matrix_result">Result:</string>
    <string name="saving">Saving</string>
    <string name="save">Save</string>
    <string name="text_existed_already">Existed already!</string>
    <string name="matrix">Matrix:</string>
    <string name="rows_not_equals_columns">Number rows not equals number columns</string>
    <string name="determinant">Determinant</string>
    <string name="show">Show</string>
    <string name="remove">Remove</string>
    <string name="cannot_be_empty">Cannot be empty!</string>
    <string name="rows_not_equal_columns">Count  Rows of matrix B not equals count matrix of A</string>
    <string name="item_matrix_a">Matrix A</string>
    <string name="item_matrix_b">Matrix B</string>
    <string name="item_matrix">Matrix</string>
    <string name="determinant_is_zero">Determinant is zero!</string>
    <string name="matrix_l">Matrix L:</string>
    <string name="matrix_u">Matrix U:</string>
    <string name="separate_lu">Separation LU</string>
    <string name="text_matrix_l">Matrix L</string>
    <string name="text_matrix_u">Matrix U</string>
    <string name="text_select_matrix">Select Matrix</string>
    <string name="multiplication_matrix_by_number">Multiplication by number</string>
    <string name="text_warming_enter_number_k">Enter number K!</string>
    <string name="text_author_1">Yurii Alieksieiev (30643)</string>
    <string name="text_footer">WSINF Lodz 2020</string>
    <string name="text_author_2">Oleg Horbatiuk (30715)</string>
    <string name="insert">Insert</string>

    <string-array name="numbers_for_spinner">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="size_matrix_for_spinner">
        <item>2x2</item>
        <item>3x3</item>
        <item>4x4</item>
        <item>5x5</item>
        <item>6x6</item>
        <item>7x7</item>
        <item>8x8</item>
        <item>9x9</item>
        <item>10x10</item>
    </string-array>
</resources>
