<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_addition_matrix"
                android:icon="@drawable/ic_basic_operation_matrices"
                android:title="@string/basic_actions_of_matrix"/>

        <item
                android:id="@+id/nav_multiplication_matrix"
                android:icon="@drawable/ic_multiplication_matrix"
                android:title="@string/multiplication_of_matrix"/>

        <item android:id="@+id/nav_transpose_matrix"
              android:icon="@drawable/ic_transpose_matrix"
              android:title="@string/transpose_of_matrix"/>

        <item android:id="@+id/nav_determinant_matrix"
              android:icon="@drawable/ic_determinant_matrix"
              android:title="@string/determinant_of_matrix"/>

        <item android:id="@+id/nav_inverse_matrix"
              android:icon="@drawable/ic_inversion_matrix"
              android:title="@string/inverse_of_matrix"/>
    </group>

   <group android:id="@+id/test" android:checkableBehavior="none">
       <item android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/about"/>
   </group>

</menu>