<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ActivityAbout">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:contentDescription="@null"
        android:padding="20dp"
        android:src="@drawable/ic_logo" />

    <TextView
        android:id="@+id/tv_program"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"
        android:text="@string/the_app_matrix"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_program"
        android:layout_marginTop="10dp"
        android:text="@string/special_for"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_author_2"
        android:text="@string/text_author_1"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_author_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_footer"
        android:text="@string/text_author_2"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/text_footer"
        android:textAlignment="center"
        android:textSize="18sp" />


</RelativeLayout>