<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <TextView
            android:id="@+id/tv_select_matrix"
            style="@style/header_alert_dialog"
            android:text="@string/text_select_matrix"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/tv_select_matrix">
        <Button
                    android:id="@+id/btn_matrix_l"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="80dp"
                    android:text="@string/text_matrix_l"
                    android:visibility="visible"
                    android:textSize="20sp"
                    tools:ignore="ButtonStyle"/>

            <Button
                    android:id="@+id/btn_matrix_u"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="80dp"
                    android:text="@string/text_matrix_u"
                    android:textSize="20sp"
                    tools:ignore="ButtonStyle"/>
    </LinearLayout>



</RelativeLayout>