<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/activityBackground"
                android:padding="10dp"
                android:focusableInTouchMode="true">

    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:id="@+id/ln_count_rows_matrix"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="horizontal"
                    android:gravity="start"
                    android:background="@color/white"
                    android:layout_toStartOf="@id/btn_clear">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/count_rows"
                        android:textAlignment="textEnd"
                        android:textColor="@color/textColor"/>

                <Spinner
                        android:id="@+id/sp_count_rows_matrix"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColor"
                        android:entries="@array/numbers_for_spinner"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/ln_count_columns_matrix"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="horizontal"
                    android:layout_below="@id/ln_count_rows_matrix"
                    android:gravity="start"
                    android:background="@color/white"
                    android:layout_toStartOf="@id/btn_clear">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/count_columns"
                        android:textAlignment="textEnd"
                        android:textColor="@color/textColor"/>

                <Spinner
                        android:id="@+id/sp_count_columns_matrix"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColor"
                        android:entries="@array/numbers_for_spinner"/>
            </LinearLayout>

            <Button
                    android:id="@+id/btn_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@id/ln_count_rows_matrix"
                    android:layout_alignBottom="@id/ln_count_columns_matrix"
                    android:layout_marginStart="5dp"
                    android:text="@string/clear"/>

            <TextView
                    android:id="@+id/tv_text_enter_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_value_of_matrix"
                    android:layout_below="@id/ln_count_columns_matrix"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    android:padding="8dp"/>

            <HorizontalScrollView
                    android:id="@+id/hsv_matrix_a_b"
                   style="@style/matrix"
                    android:layout_below="@id/tv_text_enter_value"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true">

                        <GridLayout
                                android:id="@+id/gl_matrix_transpose"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                        </GridLayout>

            </HorizontalScrollView>

            <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/hsv_matrix_a_b"
                    android:layout_centerHorizontal="true">

            <RelativeLayout
                    android:id="@+id/rl_result"
                    style="@style/matrix_result"
                    android:visibility="invisible">

                <TextView
                        android:id="@+id/tv_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/result"
                        android:textSize="30sp"
                        android:textColor="@color/textColor"
                        android:layout_centerHorizontal="true"/>

                <GridLayout
                        android:id="@+id/gl_matrix_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_result"
                        android:layout_centerHorizontal="true">
                </GridLayout>


            </RelativeLayout>
            </HorizontalScrollView>
        </RelativeLayout>

    </ScrollView>

    <Button
            android:id="@+id/btn_run"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/equals_symbol"
            android:textSize="30sp"/>

</RelativeLayout>